google-ditu 替换数学计算部分变量

--- a/google-ditu/index.html
+++ b/google-ditu/index.html
@@ -944,7 +944,8 @@ function recordCityblockHeavyFlashLoadTime() {
 window.onunload = function(){GUnload();};
 window.onresize = function(){resizeApp();};
 </script>
-</head><body class="applewebkit kui" dir="ltr" itemscope="itemscope" itemtype="http://schema.org/WebPage">
+</head>
+<body class="applewebkit kui" dir="ltr" itemscope="itemscope" itemtype="http://schema.org/WebPage">
 <div class="cs" id="main">
   <div id="inner"> <a class="offscreen" href="/m?oi=screenreader">屏幕阅读器用户：单击此处获取纯 HTML 版本</a>
     <input type="hidden" id="csi"/>
