--- a/baidu/index.html
+++ b/baidu/index.html
@@ -18,6 +18,8 @@ var map = new BMap.Map("container");            // 创建Map实例
 var point = new BMap.Point(116.404, 39.915);    // 创建点坐标
 map.centerAndZoom(point,15);                     // 初始化地图,设置中心点坐标和地图级别。
 
+
+/*
 var myGeo = new BMap.Geocoder();
 // 将地址解析结果显示在地图上,并调整地图视野
 myGeo.getPoint("北京市海淀区上地10街", function(point){
@@ -26,6 +28,12 @@ myGeo.getPoint("北京市海淀区上地10街", function(point){
     map.addOverlay(new BMap.Marker(point));
   }
 }, "北京市");
+*/
+
+var local = new BMap.LocalSearch(map, {
+  renderOptions:{map: map}
+});
+local.search("魏公村");
 
 </script>
 </body>
