--- a/baidu/geo.html
+++ b/baidu/geo.html
@@ -4,48 +4,50 @@
 <meta charset="utf-8">
 <title>无标题文档</title>
 <script language="javascript">
-var ax = ["=", ".", "-", "*"];
+//var ax = ["=", ".", "-", "*"];
 var bU = 1 << 23;
 var aK = 2;
 
 function U(cP) {
+	//确定坐标类型
 	var cO = am(cP.charAt(0));
 	var cI = cP.substr(1);
-	var cR = 0;
 	var T = cI.length;
 	var cS = [];
 	var cM = [];
 	var cN = [];
-	while (cR < T) {
-		if (cI.charAt(cR) == ax[0]) {
-			if ((T - cR) < 13) {
+	
+	var i = 0;
+	while (i < T) {
+		if (cI.charAt(i) == '=') {
+			if ((T - i) < 13) {
 				return 0
 			}
-			cN = cy(cI.substr(cR, 13), cS);
+			cN = cy(cI.substr(i, 13), cS);
 			if (cN < 0) {
 				return 0
 			}
-			cR += 13
+			i += 13
 		} else {
-			if (cI.charAt(cR) == ";") {
+			if (cI.charAt(i) == ";") {
 				cM.push(cS.slice(0));
 				cS.length = 0;
-				++cR
+				++i
 			} else {
-				if ((T - cR) < 8) {
+				if ((T - i) < 8) {
 					return 0
 				}
-				cN = aQ(cI.substr(cR, 8), cS);
+				cN = aQ(cI.substr(i, 8), cS);
 				if (cN < 0) {
 					return 0
 				}
-				cR += 8
+				i += 8
 			}
 		}
 	}
-	for (var cL = 0, cJ = cM.length; cL < cJ; cL++) {
-		for (var cK = 0, cQ = cM[cL].length; cK < cQ; cK++) {
-			cM[cL][cK] /= 100
+	for (var j = 0; j < cM.length; j++) {
+		for (var k = 0; k < cM[j].length; k++) {
+			cM[j][k] /= 100
 		}
 	}
 	return {
@@ -55,14 +57,14 @@ function U(cP) {
 }
 function am(cI) {
 	var T = -1;
-	if (cI == ax[1]) {
-		T = aK
+	if (cI == '.') {
+		T = 2
 	} else {
-		if (cI == ax[2]) {
-			T = bt
+		if (cI == '-') {
+			T = 1
 		} else {
-			if (cI == ax[3]) {
-				T = aP
+			if (cI == '*') {
+				T = 0
 			}
 		}
 	}
@@ -72,17 +74,17 @@ function cy(cK, cI) {
 	var T = 0;
 	var cM = 0;
 	var cL = 0;
-	for (var cJ = 0; cJ < 6; cJ++) {
-		cL = aa(cK.substr(1 + cJ, 1));
+	for (var i = 0; i < 6; i++) {
+		cL = aa(cK.substr(1 + i, 1));
 		if (cL < 0) {
-			return -1 - cJ
+			return -1 - i
 		}
-		T += cL << (6 * cJ);
-		cL = aa(cK.substr(7 + cJ, 1));
+		T += cL << (6 * i);
+		cL = aa(cK.substr(7 + i, 1));
 		if (cL < 0) {
-			return -7 - cJ
+			return -7 - i
 		}
-		cM += cL << (6 * cJ)
+		cM += cL << (6 * i)
 	}
 	cI.push(T);
 	cI.push(cM);
@@ -96,17 +98,17 @@ function aQ(cL, cJ) {
 	var T = 0;
 	var cN = 0;
 	var cM = 0;
-	for (var cK = 0; cK < 4; cK++) {
-		cM = aa(cL.substr(cK, 1));
+	for (var i = 0; i < 4; i++) {
+		cM = aa(cL.substr(i, 1));
 		if (cM < 0) {
-			return -1 - cK
+			return -1 - i
 		}
-		T += cM << (6 * cK);
-		cM = aa(cL.substr(4 + cK, 1));
+		T += cM << (6 * i);
+		cM = aa(cL.substr(4 + i, 1));
 		if (cM < 0) {
-			return -5 - cK
+			return -5 - i
 		}
-		cN += cM << (6 * cK)
+		cN += cM << (6 * i)
 	}
 	if (T > bU) {
 		T = bU - T
