--- a/baidu/index.html
+++ b/baidu/index.html
@@ -19,22 +19,23 @@ var point = new BMap.Point(116.404, 39.915);    // 创建点坐标
 map.centerAndZoom(point,15);                     // 初始化地图,设置中心点坐标和地图级别。
 
 
-/*
-var myGeo = new BMap.Geocoder();
-// 将地址解析结果显示在地图上,并调整地图视野
-myGeo.getPoint("北京市海淀区上地10街", function(point){
-  if (point) {
-    map.centerAndZoom(point, 16);
-    map.addOverlay(new BMap.Marker(point));
-  }
-}, "北京市");
-*/
 
+var gc = new BMap.Geocoder();    
+
+map.addEventListener("click", function(e){        
+    var pt = e.point;
+    gc.getLocation(pt, function(rs){
+        var addComp = rs.addressComponents;
+        alert(addComp.province + ", " + addComp.city + ", " + addComp.district + ", " + addComp.street + ", " + addComp.streetNumber);
+    });        
+});
+
+/*
 var local = new BMap.LocalSearch(map, {
   renderOptions:{map: map}
 });
 local.search("魏公村");
-
+*/
 </script>
 </body>
 </html>
