--- a/google-api/demo.html
+++ b/google-api/demo.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html><head>
 <title>Google Maps JavaScript API v3 Example: Map Simple</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <meta charset="utf-8">
