--- a/google-api/demo.html
+++ b/google-api/demo.html
@@ -1,34 +1,31 @@
 <!DOCTYPE html>
-<html><head>
-<title>Google Maps JavaScript API v3 Example: Map Simple</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-<meta charset="utf-8">
-<style>
-  html, body, #map_canvas {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-  }
-</style>
-<script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
-<script>
-var map;
-function initialize() {
-	map = new google.maps.Map(document.getElementById('map_canvas'),{
-		zoom: 13,
-		center: new google.maps.LatLng(39.935078773641315, 116.41233444213867),
-		mapTypeId: google.maps.MapTypeId.ROADMAP
-	});
-}
-
-google.maps.event.addDomListener(window, 'load', initialize);
-
-
-</script>
-</head>
-<body>
-
-<div id="map_canvas"></div>
-
-</body>
+<html>
+  <head>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
+    <title>Google Maps JavaScript API v3 Example: Marker Simple</title>
+    <link href="https://maps.googleapis.com/maps/documentation/javascript/examples/default.css" rel="stylesheet">
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+    <script>
+      function initialize() {
+        var myLatlng = new google.maps.LatLng(-25.363882,131.044922);
+        var mapOptions = {
+          zoom: 4,
+          center: myLatlng,
+          mapTypeId: google.maps.MapTypeId.ROADMAP
+        }
+        var map = new google.maps.Map(document.getElementById('map_canvas'), mapOptions);
+		/*
+        var marker = new google.maps.Marker({
+            position: new google.maps.LatLng(-25.363882,131.044922),
+            map: map,
+            title: 'Hello World!'
+        });
+		*/
+      }
+    </script>
+  </head>
+  <body onload="initialize()">
+    <div id="map_canvas"></div>
+  </body>
 </html>
