--- a/leafletjs_v0.5/debug/map/map.html
+++ b/leafletjs_v0.5/debug/map/map.html
@@ -12,10 +12,13 @@
 
 	<script type="text/javascript" src="../../build/deps.js"></script>
 	<script src="../leaflet-include.js"></script>
+    <style>
+	.map{ background:#F00;}
+	</style>
 </head>
 <body>
 
-	<div id="map"></div>
+	<div id="map" class="map"></div>
 	<button id="populate">Populate with 10 markers</button>
 
 	<script type="text/javascript">
