--- a/baidu/v1.3/demo.html
+++ b/baidu/v1.3/demo.html
@@ -4,8 +4,7 @@
 <meta charset="utf-8">
 <title>baidu</title>
 <link rel="stylesheet" type="text/css" href="http://api.map.baidu.com/res/13/bmap.css"/>
-<script type="text/javascript" src="http://api.map.baidu.com/getscript?v=1.3&key=&services=&t=20130131111149"></script>
-<!--<script type="text/javascript" src="http://api.map.baidu.com/api?v=1.3"></script>-->
+<script type="text/javascript" src="http://api.map.baidu.com/api?v=1.3"></script>
 </head>
 
 <body>
