--- a/Leaflet-master/debug/vector/vector-simple.html
+++ b/Leaflet-master/debug/vector/vector-simple.html
@@ -14,7 +14,7 @@
 	<script src="../leaflet-include.js"></script>
 </head>
 <body>
-	<div id="map"></div>
+	<div id="map" style="width:660px; height:290px;"></div>
 
 	<script>
 		var map = L.map('map');
